:bug: openbook/openspace -> okuna

--- a/public/i18n/en-US.json
+++ b/public/i18n/en-US.json
@@ -55,7 +55,7 @@
         "diaspora": "Facebook alternative based on the principles of decentralisation, freedom and privacy.",
         "pixelfed": "Ad-free photo sharing app with chronological timeline.",
         "tookapic": "365-day photo-sharing platform that encourages you to be thankful for beautiful, ordinary days.",
-        "openspace": "Privacy-friendly, transparent and community-driven social network."
+        "okuna": "Privacy-friendly, transparent and community-driven social network."
       },
       "messaging": {
         "signal": "Open-source text, voice and video messaging app developed by a non-profit organization. Sustained entirely by grants and donations.",
