fix minor typo (mastadon > mastodon)

--- a/public/i18n/en-US.json
+++ b/public/i18n/en-US.json
@@ -50,7 +50,7 @@
     },
     "descriptions": {
       "social": {
-        "mastodon": "With millions of users, Mastadon is the most popular alternative social network.",
+        "mastodon": "With millions of users, Mastodon is the most popular alternative social network.",
         "friendica": "A Facebook-style social network with no central ownership.",
         "diaspora": "Facebook alternative based on the principles of decentralisation, freedom and privacy.",
         "pixelfed": "Ad-free photo sharing app with chronological timeline.",
